examples/test/testpolicy4919.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4919
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key46: value37
      key18: value15
      key33: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value1
          key46: value46
      podSelector:
        matchLabels:
          key45: value41
          key34: value21
